Description of usage

--- a/webpackages/drag-and-drop-helper/parent-dropzone/demo/index.html
+++ b/webpackages/drag-and-drop-helper/parent-dropzone/demo/index.html
@@ -27,6 +27,8 @@
      <parent-dropzone cubx-dependency="this/parent-dropzone/main"></parent-dropzone>
 </div>
 <h1>parent-dropzone</h1>
+Not visible Element, no demo available.
+<h2>Description</h2>
 <p>This Cubble make the parent compound component to a drop zone. When an item is dropped on the parent compound, will new dynamic connections created. The created connections properties are  defined in the slot "connectionDef".</p>
 <p>The new connections will established between the following elements:
 <ul>
@@ -43,6 +45,7 @@ The connectionDef slot should be an array of definition objects. A definition ob
     <li>source - this property defined the source slotId</li>
     <li>destination - this property defined the destination slotId</li>
 </ul>
+
 
 
 </body>
