--- a/webpackages/drag-and-drop-helper/draggable-maker/demo/index.html
+++ b/webpackages/drag-and-drop-helper/draggable-maker/demo/index.html
@@ -25,10 +25,10 @@ Not visible Element, no demo available.
 </div>
 <h2>Instructions</h2>
 <ul>
-<li>use it in compound component</li>
-<li>make a sibling member content draggable</li>
-<li>initialise the slot "draggableElementSelector" with a css selector of the element want to make it draggable. The selector will used in the context of the (parent) compound component.</li>
-<li>by drag the draggable element will the runtimeId of the parent compound component transported as data.</li>
+<li>Use this Cubble in a compound component</li>
+<li>This Cubble make a child element of a sibling member content draggable</li>
+<li>The <code>draggableElementSelector</code> slot defines the CSS selector of the element , which is to be draggable. The selector will on the context of the (parent) compound component performed.</li>
+<li>By dragging the element will the runtimeId of the parent compound component as data transported.</li>
 </ul>
 </body>
 </html>
